Fixed spacing on icon-list

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -392,6 +392,7 @@ li::marker {
 
 .icon-list li {
     display: inline-block;
+    margin: 0;
     padding-left: 0;
     padding-right: var(--margin-xsmall);
 }
